fix: Kreta submenu is not responsive

--- a/apps/frontend/src/app/components/header/header.component.css
+++ b/apps/frontend/src/app/components/header/header.component.css
@@ -198,7 +198,8 @@ i {
   }
 
   .ekreta img {
-    padding: 0;
+    padding: 11.5px 0 11.5px 32px;
+    margin: 0;
   }
 
   .menu-header {
